--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
 android {
-    compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.vector.appupdatedemo"
-        minSdkVersion 14
-        targetSdkVersion 26
+        minSdkVersion 21
+        targetSdkVersion 28
         versionCode 1
         versionName "0.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -25,31 +24,31 @@ android {
 
 dependencies {
 
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
 //    compile project(':update-app')
-    compile project(':update-app-kotlin')
+    implementation project(':update-app-kotlin')
 
     //compile 'com.qianwen:update-app-kotlin:1.1.0'
     //okgo
     //rxjava 1
-    compile 'com.android.support:palette-v7:26.1.0'
+    implementation 'com.android.support:palette-v7:28.0.0'
     //权限引导
-    compile 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
-    compile 'com.qianwen:okhttp-utils:3.8.0'
+    implementation 'com.qianwen:okhttp-utils:3.9.5'
 
-    compile 'com.lzy.net:okgo:3.0.4'
+    implementation 'com.lzy.net:okgo:3.0.4'
 
-    compile 'io.reactivex:rxjava:1.2.9'
+    implementation 'io.reactivex:rxjava:1.3.8'
 
-    compile 'io.reactivex:rxandroid:1.2.0'
-    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
-    testCompile 'junit:junit:4.12'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.4@aar'
+    testImplementation 'junit:junit:4.13.2'
 }
