--- a/update-app-kotlin/build.gradle
+++ b/update-app-kotlin/build.gradle
@@ -2,12 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.novoda.bintray-release'//添加
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion  26
+        minSdkVersion 21
+        targetSdkVersion  28
         versionCode 1
         versionName "1.0"
 
@@ -27,16 +26,16 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:"+rootProject.kotlin_version
 
-    compile 'com.qianwen:update-app:'+rootProject.ext.update_app_version
-//    compile project(':update-app')
+//    api 'com.qianwen:update-app:'+rootProject.ext.update_app_version
+    compile project(':update-app')
 }
 //添加
 publish {
