--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.4.31'
-    ext.novoda_version = '0.8.0'
+    ext.novoda_version = '0.9.2'
     repositories {
         google()
         mavenCentral()
@@ -43,7 +43,7 @@ ext {
 
 
 //防止上传kotlin是报错,
-tasks.getByPath(":update-app-kotlin:releaseAndroidJavadocs").enabled = false
+//tasks.getByPath(":update-app-kotlin:releaseAndroidJavadocs").enabled = false
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
